--- a/style.css
+++ b/style.css
@@ -73,7 +73,9 @@ body{
     }
     .search-box{
         padding: 15px;
-        flex: 0;
+        padding-right: 0;
+        flex: 1;
+        margin-right: 10px;
     }
     .btn{
         height: 50px;
